@@ -1,4 +1,4 @@
-# Copyright (C) 2001-2007 by the Free Software Foundation, Inc.
+# Copyright (C) 2001-2008 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -292,6 +292,12 @@ class OldStyleMemberships(MemberAdaptor.MemberAdaptor):
                     raise Errors.NotAMemberError, member
                 del self.__mlist.members[memberkey]
                 self.__mlist.digest_members[memberkey] = cpuser
+                # If we recently turned off digest mode and are now
+                # turning it back on, the member may be in one_last_digest.
+                # If so, remove it so the member doesn't get a dup of the
+                # next digest.
+                if self.__mlist.one_last_digest.has_key(memberkey):
+                    del self.__mlist.one_last_digest[memberkey]
             else:
                 # Be sure the list supports regular delivery
                 if not self.__mlist.nondigestable:
